--- a/index.html
+++ b/index.html
@@ -40,13 +40,36 @@
                     </div>
                 <div class="options">
                     <ul>
-                        <li><a href="Grocery">Grocery</a></li>
+        
                         <li><a href="Makeup">Cosmetic</a></li>
                         <li><a href="Electronics">Electronics</a></li>
+                        <li><a href="Personal care">Personal care</a></li>
+                        <li><a href="cloths">Cloths</a></li>
                     </ul>
                 </div>
         </header>
         <div class="main">
-            <img src="C:\programming in c\lab 1\lab2\sydt\61lwJy4B8PL._SX3000_ amazon.jpg" alt:img ,width:56,height:67>
+            
+        </div>
+        <div class="shopping">
+            <div class="box1 box">
+                <h2>Cloths</h2>
+                <div class="pht" style="background-image:url('box8_imagecloth.jpg') ;"></div>
+                <a href="shop">shop now</a>
+            </div>
+            <div class="box 2 box">
+                <h2>Cosmetic</h2>
+                <div class="pht" style="background-image:url('box5_imagemakeup.jpg') ;"></div>
+                <a href="shop">shop now</a></div>
+            <div class="box 3 box">
+                <h2>Electronics</h2>
+                <div class="pht" style="background-image:url('digitalappliances.jpg') ;"></div>
+                <a href="shop">shop now</a></div>
+            <div class="box 4 box">
+                <h2>Personal care</h2>
+                <div class="pht" style="background-image:url('personal care.jpg') ;"></div>
+                <a href="shop">shop now</a>    
+            </div>
         </div>
     </body>
+    </html>
