--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li>Namaste,<br>Welcome</li>
                         <li><a href="#home">Home</a></li>
    <li><a href="#about">About Us</a></li>
-  <li><a href="#contact">login</a></li>
+  <li><a href="login.html">login</a></li>
   <li><a href="cart">Cart<br>
     <i class="fa-solid fa-cart-shopping"></i></a></li>
                     </ul>
@@ -70,6 +70,10 @@
                 <div class="pht" style="background-image:url('personal care.jpg') ;"></div>
                 <a href="shop">shop now</a>    
             </div>
+        </div>
+        <div>
+            <i class="fa-brands fa-facebook"></i>
+            <a href="https://www.facebook.com/arpan.bhandari.756/">Facebook</a>
         </div>
     </body>
     </html>
