--- a/aboutus.html
+++ b/aboutus.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=0, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .aboute{
+            font-size: 40;
+          background-color: antiquewhite;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>A2M E-commerce Website</h2>
+    <h5>"shopping easier like never before"</h5>
+    <p class="aboute">"A2M" is a multi-vender e-commerce website which would help users to look for products and get details of it with 24-hour<br> service with global suppliers reach despite low operating costs.</p>
+      <p class="aboute">A2M will work as a connecting bridge between buyer and seller over coming all the above short coming. It will be used by shops and <br>industries for the supply of daily product to customize products with global scope.<br>Our "A2M" website will have a scope as it would be helpful for business growth, the marketplace, which will facilitate opportunity to compare products<br> with great offers and brand exposer along with fast shipping</p>
 </body>
 </html>
